--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ section
 }
 
 
+
 /* ============================== home start ============================================ */
 .banner
 {
@@ -19,7 +20,6 @@ section
     min-height: 100vh;
     background-size: cover;
     background: linear-gradient(45deg, #FDA7DF, #f42f8c);
-    background-position: right;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -46,6 +46,7 @@ section
 {
     position: relative;
     background: #2196f3;
+    border-radius: 20px;
     display: inline-block;
     color: #fff;
     text-decoration: none;
@@ -57,6 +58,7 @@ section
     font-weight: 500;
 }
 /* ============================================== home end ================================== */
+
 
 
 /*  ============================================= header start================================ */
@@ -107,6 +109,7 @@ header ul li
 header ul li a
 {
     background: #000;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, .6);
     padding: 10px 10px;
     border-radius: 10px;
     position: relative;
@@ -134,6 +137,7 @@ header.sticky ul li a:hover
 /*  ============================================= header end ================================ */
 
 
+
 /* ============================================== about start ================================== */
 .heading
 {
@@ -147,10 +151,13 @@ header.sticky ul li a:hover
     font-size:30px;
     font-weight: 600;
 }
-img
+
+.img
 {
     max-width: 100%;
     border-radius: 20px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.9);
+
 }
 
 .content
@@ -174,6 +181,130 @@ img
 /* ============================================== about end ================================== */
 
 
+
+/* ======================================== skill start =======================================*/
+.skills
+{
+    padding: 20px;
+    background: linear-gradient(45deg,  #9980FA, #FDA7DF);
+}
+
+.skills h3
+{
+    border-radius: 20px;
+    padding: 20px 30px;
+    display: inline-block;
+    text-align: center;
+    align-items: center;
+    margin-left: 44%;
+    letter-spacing: 2px;
+    background-color: #111;
+    color: snow;
+    cursor: default;
+
+
+}
+.skills h3:hover
+{
+    background: linear-gradient(45deg,  #9980FA, #ec9412);
+}
+
+
+.wrapper {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.wrapper .card {
+    margin: 20px;
+    margin-bottom: 20px;
+    width: calc(33% - 20px);
+    background-color: #fff;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 10px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.7);
+}
+.wrapper .card .circle
+{
+    position: relative;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    cursor: default;
+}
+.card .circle .box,
+.card .circle .box span
+{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transition: all 0.3s;
+
+}
+
+.card .circle .box
+{
+    height: 100%;
+    width: 100%;
+    background-color: #fff;
+    transform: translate(-50%, -50%) scale(0.8);
+    border-radius: 50%;
+    transition: all 0.3s;
+
+}
+.card .circle:hover .box
+{
+    transform: translate(-50%, -50%) scale(0.91);
+
+}
+
+.card .circle .box span
+{
+    font-size: 38px;
+    transform: translate(-45%, -50%);
+    font-weight: 600;
+    font-family: sans-serif;
+}
+
+.card .text
+{
+    font-size: 20px;
+    font-weight: 600;
+}
+@media(max-width: 991px) {
+    .wrapper {
+        flex-wrap: wrap;
+    }
+
+    .wrapper .card {
+        display: flex;
+    }
+}
+
+
+@media(max-width: 505px) {
+    .wrapper {
+        width: 100%;
+    }
+
+    .wrapper .card {
+        width: 100%;
+    }
+}
+
+
+
+/* ======================================== skill end =======================================*/
+
+
+
 /* ============================================= services start ===============================  */
 .services
 {
@@ -187,23 +318,25 @@ img
 {
     display: flex;
     justify-content: center;
-    /* flex-wrap: wrap; */
+    width: 100%;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 .services .content .servicesBx
 {
-    padding: 40px 20px;
+    padding: 60px 20px;
     background: #222;
-    border-radius: 20px;
+    border-radius: 30px;
     color: #fff;
-    max-width: 340px;
+    max-width: 500px;
     margin: 20px;
     text-align: center;
     transition: 0.5s;
+
 }
 .services .content .servicesBx:hover
 {
-    background: #2196f3;
+    background: #FF2C9C;
 }
 .services .content .servicesBx img
 {
@@ -215,7 +348,13 @@ img
     font-size: 20px;
     font-weight: 600;
 }
+.services .heading p
+{
+    color: #fff;
+    font-weight: 400;
+}
 /* ============================================= services end ===============================  */
+
 
 
 /* =============================================== work start ================================== */
@@ -224,6 +363,10 @@ img
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+}
+.work .heading p
+{
+    font-weight: 500;
 }
 .work .content .workBx
 {
@@ -234,19 +377,22 @@ img
 }
 .work .content .workBx img
 {
+    border-radius: 30px;
+    box-shadow: 0 5px 20px rgba(0,0,0,0.4);
     max-width: 100%;
 }
-.heading .btn
+.btn
 {
-    border-radius: 20px;
+    border-radius: 520px;
 }
 /* =============================================== work end ================================== */
+
 
 
 /* =============================================== formBx star ================================ */
 .contact
 {
-    background: #111;
+    background: #FF2C9C;
 }
 .formBx
 {
@@ -277,6 +423,8 @@ img
     color: #fff;
     border-radius: 20px;
     resize: none;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.7);
+
 }
 .formBx form textarea
 {
@@ -287,15 +435,17 @@ img
 {
     color: #999;
 }
+
 .formBx form input[type="submit"]
 {
     max-width: 100px;
-    /* background: #2196f3; */
-    background: linear-gradient(45deg, #f42f8c, #3498db);
+    background: linear-gradient(50deg, #3498db, #f42f8c, #3498db);
     cursor: pointer;
     text-transform: uppercase;
+    border-radius: 10px;
     letter-spacing: 2px;
     transition: 0.35s;
+    outline: none;
 
 }
 .formBx form input[type="submit"]:hover
@@ -340,10 +490,31 @@ img
     flex-direction: column;
     font-weight: 300;
 }
+.contact h2
+{
+    background: #FF7A18;
+    padding: 10px 10px;
+    border-radius: 10px;
+    position: relative;
+    display: inline-block;
+    margin-bottom: 25px;
+    text-decoration: none;
+    cursor: default;
+    box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+
+}
+.heading p
+{
+
+    color: #000;
+    font-size: 1rem;
+    font-weight: 700;
+}
+
 .contactinfoBx .box .text h3
 {
     font-weight: 500;
-    color: #2196f3;
+    color: #000;
     margin-bottom: 0;
 }
 .contactinfoBx .box .text p
@@ -353,15 +524,59 @@ img
 /* ========================================= contactinfoBx end ============================== */
 
 
+
+/*======================================== social media start =================================== */
+.middle {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-top: 150px;
+    text-align: center;
+    display: flex;
+}
+
+.middle .btn {
+   display: inline-block;
+   width: 50px;
+   height: 60px;
+   background-color: #9980FA;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   text-decoration: none;
+   margin-right: 40px;
+   border-radius: 50px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.7);
+
+}
+
+.btn i {
+    line-height: 70px;
+    font-size: 16px;
+    transition: 0.2s linear;
+
+}
+
+.btn:hover i {
+    transform: scale(1.3);
+    color: #f1f1f1;
+}
+
+/*======================================= social media end =================================== */
+
+
+
+
 /* ========================================== copyright start =================================*/
 .copyright
 {
     background: #000;
-    color: #fff;
+    color: #FF7A18;
     text-align: center;
-    padding: 10px;
+    padding: 30px;
 }
 /* ========================================== copyright end ====================================*/
+
 
 
 
@@ -393,7 +608,9 @@ img
     header ul li a{
         color: #fff;
         font-size: 24px;
-        margin: 10px;
+        margin: 40px;
+        box-shadow: 0px 5px 15px rgba(0, 0, 0, .6);
+        margin-top: -20px;
     }
     .toggle{
         width: 40px;
@@ -437,7 +654,6 @@ img
     }
     .content {
     flex-wrap: wrap;
-
     flex-direction: column;
     }
     .w50 {
@@ -453,6 +669,15 @@ img
     .contactinfo {
     margin: 30px 0;
     }
+    .middle .btn{
+        width: 60px;
+        margin-right: 20px;
+    }
+    .skills h3
+    {
+        margin-left: 35%;
+
+    }
 
 
 
@@ -460,7 +685,7 @@ img
 @media (max-width: 600px){
       header,
       header.sticky {
-        padding: 20px 10px;
+        padding: 20px 20px;
     }
     .banner{
         padding: 150px 10px 100px;
@@ -472,18 +697,4 @@ img
 }
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
